kubernetes/archive/arc-gke-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: arclytics
  labels:
    app: arclytics
spec:
  type: NodePort
  selector:
    app: arclytics
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: arclytics
  labels:
    app: arclytics
spec:
  selector:
    matchLabels:
      app: arclytics
  replicas: 1
  template:
    metadata:
      labels:
        app: arclytics
        role: api_server
        environment: production
        run: arclytics
        replicaset: ArcRepSet
    spec:
      containers:
        - name: arclytics
          image: asia.gcr.io/arc-sim/arc_arclytics:1.0.0
          ports:
            - containerPort: 8000
