kubernetes/archive/dask-scheduler-gke-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dask-scheduler-service
  component: scheduler
spec:
  type: NodePort
  ports:
  - name: dask-scheduler
    port: 8786
    targetPort: 8786
  - name: dask-scheduler-webui
    port: 80
    targetPort: 8787
  selector:
    app: dask
    component: scheduler
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: dask-scheduler
  labels:
    app: dask
    component: scheduler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dask
      component: scheduler
  stratey:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: dask
        component: scheduler
    spec:
      containers:
        - name: dask-scheduler-container
          image: asia.gcr.io/arc-simcct/arc_dask_scheduler:latest
          imagePullPolicy: IfNotPresent
          args:
          - 'dask-scheduler'
          - '--port'
          - '8786'
          - '--bokeh-port'
          - '8787'
          ports:
          - containerPort: 8786
          - containerPort: 8787
          resources:
            limits:
              cpu: 1
              memory: 4Gi
            requests:
              cpu: 750m
              memory: 2Gi
