kubernetes/archive/simcct-gke-loadbalanced-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simcct-service
  labels:
    app: simcct
spec:
  type: LoadBalancer
  loadBalancerIP: 35.189.61.10
  selector:
    app: simcct
  ports:
  - name: http
    port: 8000
    targetPort: 8000
    protocol: TCP
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: simcct
  labels:
    app: simcct
spec:
  selector:
    matchLabels:
      app: simcct
  replicas: 1
  template:
    metadata:
      labels:
        app: simcct
        replicaset: SimRepSet
    spec:
      containers:
      - name: simcct-container
        image: asia.gcr.io/arc-simcct/arc_sim_service:1.1.5
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        readinessProbe:
          httpGet:
            path: /healthy
            port: 8000
          initialDelaySeconds: 15
          periodSeconds: 15
          timeoutSeconds: 15
          successThreshold: 2
          failureThreshold: 5
        resources:
          requests:
            cpu: 750m
            memory: 2Gi
